--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -333,6 +333,7 @@
 
 .cta {
   display: flex;
+  flex-direction: column;
   background-color: #347ab4;
   width: 100%;
   height: 200px;
@@ -340,7 +341,7 @@
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
   color: white;
-  font-size: 4rem;
+  font-size: 2.5rem;
 }
 
 
