--- a/frontend/src/components/components.css
+++ b/frontend/src/components/components.css
@@ -320,6 +320,7 @@
   height: auto;
   max-width: 100%;
   border-radius: 5px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add drop shadow */
 }
 
 @media (max-width: 768px) {
@@ -360,7 +361,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   margin: 2rem 0;
-  padding-top: 50px;
+  /*padding-top: 50px;*/
 }
 
 .feature {
@@ -371,6 +372,9 @@
   margin: auto; /* Center horizontally */
   justify-content: center; /* Center vertically */
   align-items: center; /* Center horizontally */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add drop shadow */
+  border-radius: 4px;
+  margin-bottom: 1rem;
 }
 
 .feature-title {
@@ -388,11 +392,19 @@
   margin-bottom: 10px;
 }
 
-.feature img {
+.feature-img-left {
+  max-width: 100%;
+  height: auto;
+  margin-top: 1rem;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.feature-img-right {
   max-width: 100%;
   height: auto;
   margin-bottom: 1rem;
-  border-radius: 5px;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .profile-container {
